# ScopeMCU

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  STM32F103C8Tx_FLASH.ld  STM32F401RETx_FLASH.ld  STM32_TIMER_ADC.ioc  STM32_TIMER_ADC.xml  ScopeMCU.ioc  ScopeMCU.xml  config.cfg  scope_mcu.ioc  scope_mcu.xml
.github/workflows/: build.yml
App/: CMakeLists.txt  Portable.h  PortableMCU.cpp  PortableMCU.h  Scope.cpp  Scope.h  app.c  app.cpp  app.h  log.h  md_adc.c  md_adc.cpp  md_adc.h  md_led.cpp  md_led.h  md_pwm.cpp  md_pwm.h  md_usb.cpp  md_usb.h  retarget.c
Inc/: log.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h  usbd_cdc_if.h  usbd_conf.h
Src/: adc.c  dma.c  gpio.c  log.h  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f4xx_it.c  sys.c  tim.c  usart.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
scripts/: cloc.sh
